my-docs/Muschko/00-exercises/ex_chapter5/ex1/svc-clusterip-echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
  name: echoserver
  namespace: external
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: echoserver
