my-docs/Muschko/00-exercises/ex_chapter5/ex1/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-clusterip-svc
  namespace: external
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
