my-docs/Muschko/00-exercises/ex_chapter5/ex1/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-lb-svc
  namespace: external
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
