my-docs/Muschko/00-exercises/ex_chapter5/ex1/ingress-incoming.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incoming
  namespace: external
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-clusterip-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: echoserver
            port:
              number: 80
        path: /echo
        pathType: Exact
